--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
           </div>
         </div>
     </nav>
+    
+    <div class="container mt-2">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            If you encounter <strong>unable to render rich display</strong> issue while opening the page, don't worry, just refresh the page, otherwise ignore it
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
 
 
     <!-- <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
