--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
+    <div class="container mt-2">
+        <div class="alert alert-light alert-dismissible fade show" role="alert">
+            <a class="btn btn-success" href="https://github.com/BHOLU-SINGH/competition/tree/master/Hindi%20Notes/1.%20%E0%A4%B9%E0%A4%BF%E0%A4%82%E0%A4%A6%E0%A5%80%20%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BE%20%E0%A4%95%E0%A5%80%20%E0%A4%89%E0%A4%A4%E0%A5%8D%E0%A4%AA%E0%A4%A4%E0%A4%BF%20%E0%A4%B8%E0%A4%BE%E0%A4%AE%E0%A4%BE%E0%A4%A8%E0%A5%8D%E0%A4%AF%20%E0%A4%AA%E0%A4%B0%E0%A4%BF%E0%A4%9A%E0%A4%AF%2C%20%E0%A4%B5%E0%A4%B0%E0%A5%8D%E0%A4%A3%20%E0%A4%B5%E0%A4%BF%E0%A4%9A%E0%A4%BE%E0%A4%B0" target="_blank">Start Learning</a>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
 
 
     <!-- <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
