--- a/index.html
+++ b/index.html
@@ -312,6 +312,9 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
+    <div class="container-fluid mt-3 text-center">
+        Developer/Designer: <a href="https://github.com/bholu-singh" target="_blank">Bholu Singh</a> | All rights reserved | 2022-2023</a>
+    </div>
       
 
 
